fix: overflow

--- a/codejam/src/styles/main.scss
+++ b/codejam/src/styles/main.scss
@@ -297,6 +297,7 @@
   width: 100%;
   left: 0;
   z-index: -1;
+  overflow: hidden;
 }
 .time-wrapper {
   position: relative;
